log
Thu, May 15, 2025 10:35:44 AM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Thu, May 15, 2025 10:36:09 AM: 
 tests:  0|5
total_score: 0/70
8e7e548
Thu, May 15, 2025 10:36:42 AM: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  2|4
total_score: 15/70
e6d7d86
Thu, May 15, 2025 10:40:30 AM: 
 sudoku.c | 21 ++++++++++-----------
 1 file changed, 10 insertions(+), 11 deletions(-)
 tests:  2|4
total_score: 15/70
f636cc6
